# MyLabs

Labs/Lab10/: CMakeLists.txt  Lab10V2.cpp
Labs/Lab9/: CMakeLists.txt  Lab9.cpp
Labs/Lab_1_s_2/: CMakeLists.txt  class2.cpp  class2.hpp  mainy_2.cpp
Labs/Lab_2_s_2/: CMakeLists.txt  lab_2_s_2.cpp
Labs/WORK_IN_PROGRESS/Lab_1_s_2/: CMakeLists.txt  class.cpp  class.hpp  mainy_1.cpp
Labs/lab_5_s_2/: lab_5_s_2.cpp
Labs/lab_5_s_2_v_2/: lab_5_s_2_v_2.cpp
Labs/lab_6_s_2/: lab_6.cpp  logger.cpp  logger.hpp  my_logger.txt
Labs/lab_7_s_2/: lab_7_s_2.cpp
Labs/lab_8_s_2/: lab_8_s_2.cpp
MyProject/: CMakeLists.txt  README.md  proj_main.cpp
MyProject/inc/: funky.hpp
MyProject/src/: obj.cpp
Pract/Practice_1_sem_2/: CMakeLists.txt  Header.hpp  Source.cpp  main.cpp
Pract/Practice_2/: CMakeLists.txt  Practic_2.cpp
Pract/Practice_2/inc/: fuun.hpp
Pract/Practice_2/src/: fuun.cpp
Pract/Practice_2_sem_2/: CMakeLists.txt  Pract_2_s_2.cpp
Pract/Practice_2_v2/: CMakeLists.txt  Prakt2_v2.cpp
Pract/Practice_2_v2/inc/: fuun.hpp
Pract/Practice_2_v2/src/: fuun.cpp
Pract/Practice_3/: CMakeLists.txt  Pract_3.cpp  input.txt
Pract/Practice_3/inc/: Dop.hpp
Pract/Practice_3/src/: Dop.cpp
Pract/Practice_3_sem_2/: pr_3_s_2.cpp
Pract/Practice_4/: CMakeLists.txt  Pract_4_2.cpp
Pract/Practice_4_sem_2/: pr_4.cpp  set.txt
Pract/Practice_6/: CMakeLists.txt  PRAKT_6.cpp
Temp/: Lab_2_s_2.txt  Lab_3_s_2.txt  lab_5_s_2_IN_WORK  код.txt
